--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "prerender-spa-plugin": "^3.4.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
